# andrew-text

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  LICENSE  README.md  TODO.md  annotated.html  annotated_dup.js  classes.html  cli_8h_source.html  conanfile.py  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  lib_8hpp.html  lib_8hpp_source.html  logs_8h_source.html  navtreedata.js  navtreeindex0.js  structCliArg-members.html  structCliArg.html  structCliArg__coll__graph.map  structCliArg__coll__graph.md5  structDoubleDashArg-members.html  structDoubleDashArg.html  structParseArgsRet-members.html  structParseArgsRet.html  structParseArgsRet__coll__graph.map  structParseArgsRet__coll__graph.md5  structStrSlice-members.html  structStrSlice.html  structStrSliceIter-members.html  (+25 more)
.github/workflows/: ci.yml
cmake/: compile-options.cmake  coverage.cmake  docs.cmake  install-config.cmake  install.cmake  no-insource.cmake
docs/pages/: index.dox
search/: all_0.js  all_3.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  searchdata.js
src/: CMakeLists.txt  cli.c  cli.h  cli.test.cpp  info.h.in  lib.cpp  lib.hpp  lib.test.cpp  logs.c  logs.h  main.c  renderer.c  renderer.h  test_helper.hpp  util.c  util.h  util.test.cpp
tools/: sed.sh
